--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boblioteca ACME</title>
-    <link rel="stylesheet" href="../styles/home.css">
+    <title>Biblioteca ACME</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="main-header">
+        <div class="header-content">
+            <div class="logo-container">
+                <h1 class="logo">Biblioteca ACME</h1>
+            </div>
+            <div class="header-right">
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="locacoes.html" class="nav-link">Locações</a></li>
+                    </ul>
+                </nav>
+                <div class="search-container">
+                    <input type="text" placeholder="Buscar livros..." class="search-input">
+                    <button class="search-btn">Buscar</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <script src="../scripts/home.js"></script>
+    <link rel="stylesheet" href="../styles/home.css">
+    <script src="../scripts/home.js" defer></script>
+    <footer class="main-footer">
+        <center>
+            <p>&copy; 2025 Lucas G. Giachetto</p>
+        </center>
+    </footer>
+    <script src="../scripts/home.js"></script>
 </body>
-<script src="../scripts/home.js"></script>
 </html>
