--- a/pages/locacoes.html
+++ b/pages/locacoes.html
@@ -29,12 +29,14 @@
             </div>
         </div>
     </header>
+    <main></main>
     <button onclick="cadastro.classList.remove('oculta')">cadastro</button>
     <footer class="main-footer">
         <center>
             <p>&copy; 2025 Lucas G. Giachetto</p>
         </center>
     </footer>
+    <script src="../scripts/locacoes.js"></script>
     <div id="cadastro" class="modal oculta">
         <div class="janela">
             <h2>Cadastro de locação de livro<button onclick="cadastro.classList.add('oculta')">X</button></h2>
@@ -50,5 +52,6 @@
             </form>
         </div>
     </div>
+
 </body>
 </html>
